[project]
name = "reservations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.0",
    "fastmcp>=3.2.4",
    "google-genai>=1.73.1",
    "httpx>=0.28.1",
    "langchain-core>=1.3.0",
    "langchain-google-genai>=4.2.2",
    "langchain-mcp-adapters>=0.2.2",
    "langgraph>=1.1.9",
    "mcp[cli]>=1.27.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.45.0",
]
